Fix mobile position fixed by shifting overflow-x hidden to html and body

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-    overflow-x: clip;
     text-align: center;
     
     --default-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
