--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
-body {
+html, body {
   margin: 0;
+  overflow-x: hidden;
+  width: 100%;
   font-family: Tahoma, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
