--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -6,7 +6,6 @@
     flex-direction: column;
     width: 100%;
     min-height: 100vh;
-    overflow-x: clip;
 }
 
 .home-container .backdrop {
